# vault

./: .gitignore  Cargo.toml  Makefile  README.md  readme.md
.github/: dependabot.yml
.github/workflows/: build.yml  check.yml  ci.yml  release.yml
fixtures/keys/testuser/: config.toml
fixtures/private_keys/: testuser.pem  testuser.pub.pem
fixtures/secrets/VERSION_1_0_0_SECRET/: testuser.crypt
src/: crypto.rs  filesystem.rs  key.rs  main.rs  proto.rs  rotate_key.rs
src/commands/: get_multi.rs  mod.rs
src/crypto/: mod.rs
src/filesystem/: mod.rs
src/key/: key_map.rs  mod.rs
src/proto/: mod.rs
src/rotate_key/: mod.rs
src/template/: mod.rs
src/test_integration/: mod.rs
src/ui/: question.rs
tests/: check_keys.rs  cli.rs  create_openssl_key.rs  get.rs  get_multi.rs  integration.rs  rotate.rs  template.rs
tests/common/: mod.rs
