[package]
name = "vault"
version = "1.0.10"
authors = ["timglabisch <glabisch@easybill.de>"]
edition = "2021"

[dependencies]
openssl = {version = "0.10.*", features = ["vendored"]}
toml = "0.*"
serde_derive = "*"
serde_json = "*"
serde = "*"
clap = "4.*"
regex = "1.*"
anyhow = { version = "1.0.*", features = ["backtrace"] }
byteorder = "1.5.*"
dirs = "5.*"
globset = "0.4.*"
self_update = "0.*"
semver = "1.*"

[dev-dependencies]
serial_test = "*"